Bug 358725 - TheBat! mail-account does not show in list for import to kmail
Summary: TheBat! mail-account does not show in list for import to kmail
Status: RESOLVED FIXED
Alias: None
Product: kmailcvt
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mint (Ubuntu based) Linux
: NOR normal
Target Milestone: ---
Assignee: Laurent Montel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-29 09:32 UTC by Hauke
Modified: 2016-01-30 20:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hauke 2016-01-29 09:32:41 UTC
The above boxes seem not to be working properly... 

I newly installed linux mint rosa 17.3 with kde, containing
kmail 4.14.2.
I used The Bat! on my Win-System (linux-accessible and mounted partition on same laptop). Tried to import Mail, settings, addressbook to kmail: Started the import-assisstant, but nothing showed in the opening window.
So I gave Thunderbird a try: Installed it, but could not import data from the TheBat! to TBird either.
Now "Thunderbird" shows up in the window when I try to import any settings to kmail.
Next step: Installed TheBat with wine. Works fine so far (!) - but I'm not sure how it will work in the future - prefer linux application for mail.
Tried to import to kmail: Still nothing.

Reproducible: Always


Actual Results:  
I did as written in the helpfiles. Seems so simple. Nothing.

Expected Results:  
The Bat! should show up as a prog in the opening box.

Asus f5rl- notebook, 32 bit, dual-core cpu pentium duoT2370
Comment 1 Laurent Montel 2016-01-29 12:39:23 UTC
The bat ! indeed it's disable from linux I think that we can't access to it.
But you're right we can
I will reactivate it now.
(but for kdepim 5.2)
Comment 2 Laurent Montel 2016-01-29 13:02:40 UTC
Git commit 3a10f1c5896ee60467beaa1d29ffa05fb11de110 by Montel Laurent.
Committed on 29/01/2016 at 12:42.
Pushed by mlaurent into branch 'master'.

Fix Bug 358725 - TheBat! mail-account does not show in list for import to kmail

Reactivate it even if we are not on windows we can have access to it.

FIXED-IN: 5.2

M  +0    -2    importwizard/autodetect/thebat/thebatimportdata.cpp

http://commits.kde.org/kdepim/3a10f1c5896ee60467beaa1d29ffa05fb11de110
Comment 3 Hauke 2016-01-30 20:18:57 UTC
Hello Laurent,
I'm sorry, I don't understand fully what you did and what I will have to do.

I understand you changed something in the code. Thank you for that first  of all.

I have kde (inkluding kmail) ver. 4.14.2-0.
I don't find any version 5.2.
Where do I get it?

Or can I just add the line
 M +0 -2 importwizard/autodetect/thebat/thebatimportdata.cpp
somewhere?

Thanks
Hauke