Fix Bug 358725 - TheBat! mail-account does not show in list for import to kmail

Reactivate it even if we are not on windows we can have access to it.

FIXED-IN: 5.2
BUG: 358725