importwizard/autodetect/thebat/thebatimportdata.cpp
@@ -38,12 +38,10 @@ TheBatImportData::~TheBatImportData()
 
 bool TheBatImportData::foundMailer() const
 {
-#ifdef Q_OS_WIN
     QDir directory(mPath);
     if (directory.exists()) {
         return true;
     }
-#endif
     return false;
 }
 
